clusters/talos-ottawa/apps/pocket-id/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v1
          ports:
            - containerPort: 1411
          volumeMounts:
            - name: data
              mountPath: /app/data
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocket-id
      restartPolicy: Always
