clusters/talos-ottawa/apps/pocket-id/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - name: http
      protocol: TCP
      port: 1411
      targetPort: 1411
  type: ClusterIP
