clusters/talos-ottawa/apps/pocket-id/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    item.homer.rajsingh.info/name: "Pocket ID"
    item.homer.rajsingh.info/subtitle: "Identity and Authentication"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/pocket-id-light.svg"
    item.homer.rajsingh.info/tag: "auth"
    item.homer.rajsingh.info/keywords: "authentication, identity, sso"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-id-card"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "pocket-id.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pocket-id
          port: 1411
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
